--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+z
 <!DOCTYPE html>
 <html>
 <head>
@@ -78,7 +78,7 @@
         }
 
         .generate-button {
-            background-color: #4caf50;
+            background-color: #000000;
             color: #fff;
             border: none;
             border-radius: 4px;
